--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prepare": "husky",
     "lint": "eslint --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "swagger": "node src/swagger/swagger.js"
+    "swagger": "node src/swagger/swagger.js",
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
