chore: add settings for deployment

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon src/index.ts",
     "prepare": "husky",
     "lint": "eslint --fix",
+    "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "swagger": "node src/swagger/swagger.js",
     "seed": "ts-node prisma/seed.ts"
