--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prepare": "husky",
     "lint": "eslint --fix",
     "build": "tsc",
+    "postinstall": "prisma generate",
     "format": "prettier --write \"src/**/*.ts\"",
     "swagger": "node src/swagger/swagger.js",
     "seed": "ts-node prisma/seed.ts"
