--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.4.2",
     "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.23.7"
   },
