--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.4.2",
+    "midtrans-node-client": "^0.0.6",
     "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.23.7"
   },
