--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "express-dw-boilerplate",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "prepare": "husky",
     "lint": "eslint --fix",
